<resources>
    <string name="app_name">Joldi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="order_track">Order Track</string>
    <string name="phone">Phone</string>
    <string name="collect_parcel">Collect Parcel</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="collected_orders">Collected Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="invoice">Invoice</string>
    <string name="order_amount">Order Amount</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total">Total</string>
    <string name="deliver_to">Deliver To</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="status">Status</string>
    <string name="all_parcel">All Parcel</string>
    <string name="rider">Rider</string>
    <string name="user">User</string>
    <string name="account_type">Account Type</string>
    <string name="maps">Maps</string>
    <string name="delivered_cant_chage_status">Delivered, You cant change status</string>
    <string name="product_delivery">Product Delivery</string>
    <string name="collecting">You are collecting </string>
    <string name="and_deliver_product"> and Deliver product</string>
    <string name="delivered">delivered</string>
    <string name="returning_product">You are returning this Product.</string>
    <string name="returned">returned</string>
    <string name="loading">Loading....</string>
    <string name="no_parcel">There are no Parcels</string>
    <string name="error">There is an Error</string>
    <string name="no_internet">Internet is not available.</string>
    <string name="joldi_parcel">JOLDI Parcel</string>
    <string name="total_amount">Total Amount: </string>
    <string name="total_parcel">\n Total Parcel:</string>
    <string name="go_home">Go Home</string>
    <string name="collect_more">Collect More</string>
    <string name="email_or_pass_wrong">Email or Password is wrong.</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="set_english">Set English As Default Language</string>
    <string name="set_bangla">Set Bangla As Default Language</string>
    <string name="change_language">Change Language</string>
    <string name="valid_phone_err">Provide a valid phone number</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="mreturn">Return</string>
    <string name="deliver">Deliver</string>
    <string name="logout">Logout</string>
    <string name="pending_deliver">Pending \nDeliver</string>
    <string name="pending_collection">Pending \nCollection</string>
    <string name="collect_nfrom_hub">Collect \nFrom Hub</string>
    <string name="manual_pickup">Manual Pickup</string>
    <string name="manual_hub_collect">Manual Hub Collect</string>
    <string name="pickup_scan">Pickup Scan</string>
    <string name="hub_scan">Hub Scan</string>
    <string name="new_parcel">New Parcel</string>
    <string name="pending_delivery">Pending Delivery</string>
    <string name="report_summary">Report Summary</string>
    <string name="password_will_be_be_send_to_your_email_address">Password will be be send to your email address</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="invoice_number">Invoice number</string>
    <string name="collect_from_hub">Collect from Hub</string>
    <string name="collect_from_merchant">Collect from Merchant</string>
    <string name="amount">Amount</string>
    <string name="notes">Notes</string>
    <string name="sumit">Sumit</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="lifetime">Lifetime</string>
    <string name="delivered1">Delivered</string>
    <string name="ongoing">Ongoing</string>
    <string name="cancelled">Cancelled</string>
    <string name="save">Save</string>
</resources>
