<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorLiteAsh"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_25sdp"
    tools:context="com.joldi.ui.LoginActivity">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/edit_white"
        android:hint="@string/email_address"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:text="" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/edit_white"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:text="" />


    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/edit_white"
        android:hint="@string/phone"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:text="" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/edit_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:text="" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/edit_white"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:text="" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bg_green"
        android:onClick="doRegistration"
        android:text="@string/registration"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15sdp"
        tools:ignore="OnClick" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:onClick="loginPage"
        android:text="@string/already_have_an_account_sign_in"
        android:textAlignment="center"
        tools:ignore="OnClick" />

</LinearLayout>
