<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorLiteAsh"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_25sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_30sdp"
        android:text="@string/password_will_be_be_send_to_your_email_address" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/edit_white"
        android:hint="@string/email_address"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:text="" />


    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bg_green"
        android:onClick="resetPassword"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15sdp"
        tools:ignore="OnClick" />


</LinearLayout>
