<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.joldi.ui.HomeActivity">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Motiur Rahaman" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/collect_parcel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="collectParcel"
            android:text="@string/collect_parcel"
            android:textColor="@color/colorWhite"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/pending_parcel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="pendingOrder"
            android:text="@string/pending_orders"
            android:textColor="@color/colorWhite"
            tools:ignore="OnClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/collected_orders"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/delivered_orders"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</LinearLayout>
