<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"

    tools:context="com.joldi.ui.ReportActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="#1A3060"
            android:text="@string/today"
            android:onClick="today"
            android:textColor="@color/colorWhite"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="#1A3060"
            android:text="@string/week"
            android:onClick="week"
            android:textColor="@color/colorWhite"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"

            android:layout_weight="1"
            android:background="#1A3060"
            android:text="@string/month"
            android:onClick="month"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="#1A3060"
            android:text="@string/lifetime"
            android:onClick="lifetime"
            android:textColor="@color/colorWhite"
            tools:ignore="OnClick" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_light_green"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_11sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/delivered1"
                android:textColor="#768367"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/deliver_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/_5sdp"
                android:text=""
                android:textColor="#768367"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_light_red"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_11sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/ongoing"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/ongoing_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_light_green2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_11sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/cancelled"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/cancelled_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
