<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.joldi.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <!--  <ImageView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/_20sdp"
              android:src="@drawable/logo" />-->

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/edit_white"
            android:hint="@string/phone"
            android:inputType="text"
            android:padding="@dimen/_10sdp" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_green"
            android:onClick="trackOrder"
            android:text="@string/order_track"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp"
            tools:ignore="OnClick" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        android:visibility="gone"
        android:paddingTop="@dimen/_10sdp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_parcel"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLiteAsh"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parcelList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/tracking_item" />
    </LinearLayout>
</LinearLayout>
